--- a/adm.html
+++ b/adm.html
@@ -20,6 +20,7 @@
             <h4 id="preto">Não abuse de comandos.</h4>
             <h4 id="preto">Não quebre as diretrizes da Roblox.</h4>
         </div>
+        <hr style="border: 1px solid black;">
         <div id="comandos">
             <h1 id="preto">Comandos:</h1>
             <h4 id="preto">:team NOMEDOTIME</h4>
