--- a/player.html
+++ b/player.html
@@ -18,6 +18,7 @@
             <h4 id="preto">Não flodar no chat.</h4>
             <h4 id="preto">Não quebre as diretrizes da Roblox.</h4>
         </div>
+        <hr style="border: 1px solid black;">
         <div id="comandos">
             <h1 id="preto">Comandos:</h1>
             <h4 id="preto">:team NOMEDOTIME</h4>
